fixed search results box overlapping footer

--- a/react-vite/src/components/SearchResultsView/search-results.css
+++ b/react-vite/src/components/SearchResultsView/search-results.css
@@ -30,7 +30,7 @@
 }
 
 .results-box{
-height: 400px;
+height: 250px;
 overflow-y: auto;
 }
 
